--- a/team/index.html
+++ b/team/index.html
@@ -79,7 +79,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/sample-page/team/">Team</a></div>
+        <div class="trigger"><a class="page-link" href="/sample-page/about/">About</a><a class="page-link" href="/sample-page/team/">Team</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
