--- a/_pages/about.html
+++ b/_pages/about.html
@@ -5,3 +5,5 @@ permalink: /about/
 ---
 
 Here you can find more about our group.
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScbKvMaDTkRQ67iJvwy0sn61ax_4JC1V-f6g5jcTxvSn5oTUA/viewform?embedded=true" width="640" height="542" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
