--- a/about/index.html
+++ b/about/index.html
@@ -86,6 +86,8 @@ window.onload = wrap_img;
       <div class="wrapper">
         Here you can find more about our group.
 
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScbKvMaDTkRQ67iJvwy0sn61ax_4JC1V-f6g5jcTxvSn5oTUA/viewform?embedded=true" width="640" height="542" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/sample-page/"></data>
