--- a/index.html
+++ b/index.html
@@ -6,4 +6,10 @@ image: images/logo.png
 
 # Header comes here
 
-# Posts
+![cse-data-ai][("images/cse-data-ai.jpg")
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. A diam sollicitudin tempor id eu.
+
+# Recent posts
+
+---
