deploy: c6e9f9c16f9cfa34adb34adc5e1ce869006628a6

--- a/index.html
+++ b/index.html
@@ -88,7 +88,13 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><h1 id="header-comes-here">Header comes here</h1>
 
-<h1 id="posts">Posts</h1>
+<p>![cse-data-ai][(“images/cse-data-ai.jpg”)</p>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. A diam sollicitudin tempor id eu.</p>
+
+<h1 id="recent-posts">Recent posts</h1>
+
+<hr />
 
 
 
