--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ image: images/logo.png
 
 # Header comes here
 
-![cse-data-ai][("images/cse-data-ai.jpg")
+<img src="/images/cse-data-ai.jpg" alt="cse-data-ai" />
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. A diam sollicitudin tempor id eu.
 
