deploy: d9923888e97aef31f6d64ecd0665cbb8c2dc4006

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><h1 id="header-comes-here">Header comes here</h1>
 
-<p>![cse-data-ai][(“images/cse-data-ai.jpg”)</p>
+<p><img src="/images/cse-data-ai.jpg" alt="cse-data-ai" /></p>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. A diam sollicitudin tempor id eu.</p>
 
