--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@ image: images/logo.png
 
 # Header comes here
 
-<img src="/images/cse-data-ai.jpg" alt="cse-data-ai" />
+<img src="/sample-page/images/cse-data-ai.jpg" alt="cse-data-ai" style=" margin: 0 auto; text-align: center; display: block; ">
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. A diam sollicitudin tempor id eu.
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. A diam sollicitudin tempor id eu.
+</p>
 
 # Recent posts
 
