--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><h1 id="header-comes-here">Header comes here</h1>
 
-<p><img src="/images/cse-data-ai.jpg" alt="cse-data-ai" /></p>
+<p><img src="/sample-page/images/cse-data-ai.jpg" alt="cse-data-ai" style=" margin: 0 auto; text-align: center; display: block; " /></p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. A diam sollicitudin tempor id eu.</p>
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. A diam sollicitudin tempor id eu.
+</p>
 
 <h1 id="recent-posts">Recent posts</h1>
 
