deploy: b8a321165678242a6031bce56ddd9ec402734573

--- a/team/index.html
+++ b/team/index.html
@@ -84,7 +84,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        Here we can present ourselves.
+        Here we can present ourselves...
 
       </div>
     </main><footer class="site-footer h-card">
