--- a/_pages/team.html
+++ b/_pages/team.html
@@ -12,7 +12,7 @@ Here we can present ourselves...
   {% unless member.current %}
         <!-- The paddingtop and margin-top edits allow anchors to link properly. -->
         <div id = "{{member.name}}" class="row" style="padding-top: 60px; margin-top: -60px;">
-            <div class="col-sm-3">
+            <div class="col-4 d-table-cell p-3 v-align-middle">
                 <img class="img-fluid rounded-circle" src="{{member.image}}" width="200px" height="200px"><br>
                 <strong>{{member.name}}</strong> <br>
                 {% if member.pronouns %}
@@ -37,7 +37,7 @@ Here we can present ourselves...
                 {% if member.gitlab_username %}<a href="https://gitlab.com/{{ member.gitlab_username }}" target="_blank" title="GitLab"><i class="fab fa-gitlab"></i></a>{% endif %}
                 {% if member.dblp_url %}<a href="{{ member.dblp_url }}" target="_blank" title="DBLP"><i class="ai ai-dblp"></i></a>{% endif %}
             </div>
-            <div class="col-sm-8">
+            <div class="col-8 d-table-cell p-3">
                 <p class="text-justify">{{member.description | markdownify}} 
                     {% if member.start-date %} 
                     <br>Joined the lab on {{member.start-date}}.
@@ -53,7 +53,7 @@ Here we can present ourselves...
   {% if member.current %}
         <!-- The paddingtop and margin-top edits allow anchors to link properly. -->
         <div id = "{{member.name}}" class="row" style="padding-top: 60px; margin-top: -60px;">
-            <div class="col-sm-2">
+            <div class="col-4 d-table-cell p-3 v-align-middle">
                 <img class="img-fluid rounded-circle" src="{{member.image}}" width="128px" height="128px"><br>
                 <strong>{{member.name}}</strong> <br>
                 {% if member.pronouns %}
@@ -78,7 +78,7 @@ Here we can present ourselves...
                 {% if member.gitlab_username %}<a href="https://gitlab.com/{{ member.gitlab_username }}" target="_blank" title="GitLab"><i class="fab fa-gitlab"></i></a>{% endif %}
                 {% if member.dblp_url %}<a href="{{ member.dblp_url }}" target="_blank" title="DBLP"><i class="ai ai-dblp"></i></a>{% endif %}
             </div>
-            <div class="col-sm-8">
+            <div class="col-8 d-table-cell p-3">
                 <p class="text-justify">{{member.description | markdownify}} <br> {{member.name}} was working with us from {{member.start-date}} to {{member.end-date}}, and has since moved on to be {{member.current}}.</p>
             </div>
         </div>
