--- a/_pages/team.html
+++ b/_pages/team.html
@@ -8,12 +8,13 @@ Here we can present ourselves...
 
 
 <h1>Team</h1>
-{% for member in site.members %}
+{% assing sorted = site.members | sort: "start-date" %}
+{% for member in sorted %}
   {% unless member.current %}
         <!-- The paddingtop and margin-top edits allow anchors to link properly. -->
-        <div id = "{{member.name}}" class="row" style="padding-top: 60px; margin-top: -60px;">
-            <div class="col-4 d-table-cell p-3 v-align-middle">
-                <img class="img-fluid rounded-circle" src="{{member.image}}" width="200px" height="200px"><br>
+        <div id = "{{member.name}}" class="row card-box">
+            <div class="col-4 d-table-cell p-3 v-align-middle card">
+                <img class="img-fluid rounded-circle" src="{{member.image}}"><br>
                 <strong>{{member.name}}</strong> <br>
                 {% if member.pronouns %}
                 <em>{{member.pronouns}}</em> <br>
@@ -52,9 +53,9 @@ Here we can present ourselves...
 {% for member in site.members %}
   {% if member.current %}
         <!-- The paddingtop and margin-top edits allow anchors to link properly. -->
-        <div id = "{{member.name}}" class="row" style="padding-top: 60px; margin-top: -60px;">
-            <div class="col-4 d-table-cell p-3 v-align-middle">
-                <img class="img-fluid rounded-circle" src="{{member.image}}" width="128px" height="128px"><br>
+        <div id = "{{member.name}}" class="row card-box">
+            <div class="col-4 d-table-cell p-3 v-align-middle card">
+                <img class="img-fluid rounded-circle" src="{{member.image}}"><br>
                 <strong>{{member.name}}</strong> <br>
                 {% if member.pronouns %}
                 <em>{{member.pronouns}}</em> <br>
