--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta property="twitter:image" content="https://m3hrdadfi.github.io/sample-page/images/logo.png" />
 <meta property="twitter:title" content="Title comes here …" />
 <script type="application/ld+json">
-{"image":"https://m3hrdadfi.github.io/sample-page/images/logo.png","url":"https://m3hrdadfi.github.io/sample-page/","headline":"Title comes here …","@type":"WebSite","name":"Title comes here …","description":"Description comes here …","@context":"https://schema.org"}</script>
+{"headline":"Title comes here …","url":"https://m3hrdadfi.github.io/sample-page/","@type":"WebSite","image":"https://m3hrdadfi.github.io/sample-page/images/logo.png","name":"Title comes here …","description":"Description comes here …","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/sample-page/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://m3hrdadfi.github.io/sample-page/feed.xml" title="Title comes here ..." /><link rel="shortcut icon" type="image/x-icon" href="/sample-page/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -81,7 +81,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/sample-page/about/">About</a><a class="page-link" href="/sample-page/publications/">Publications</a><a class="page-link" href="/sample-page/team/">Team</a><a class="page-link" href="/sample-page/bibliography/norlund2021.html">Transfering Knowledge from Vision to Language: How to Achieve it and how to Measure it?</a></div>
+        <div class="trigger"><a class="page-link" href="/sample-page/about/">About</a><a class="page-link" href="/sample-page/publications/">Publications</a><a class="page-link" href="/sample-page/team/">Team</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
