Change the style and and some fn

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -4,8 +4,38 @@ title: About
 permalink: /about/
 ---
 
-Here you can find more about our group.
-
-<hr/>
-
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScbKvMaDTkRQ67iJvwy0sn61ax_4JC1V-f6g5jcTxvSn5oTUA/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0" style="margin: 0px auto;text-align: center !important;display: block;">Loading…</iframe>
+<div class="container my-5" id="abouttextstyle">
+<div class="row">
+    <div class="col-md-6 p-4 p-sm-5 order-2 order-sm-1"> 
+        <small class="text-uppercase" style="color: #43a3fc;"></small>
+        <h1 class="h2 mb-4" style="font-weight: 600;">Our <span style="color: #43a3fc;">mission</span></h1>
+        <p class="text-secondary">
+            <span class="placeholder col-12 placeholder-lg"></span>
+            <span class="placeholder col-12 placeholder-lg"></span>
+            <span class="placeholder col-12 placeholder-lg"></span>
+            <span class="placeholder col-12 placeholder-lg"></span>
+            <span class="placeholder col-12 placeholder-lg"></span>
+            <span class="placeholder col-12 placeholder-lg"></span>
+            <span class="placeholder col-12 placeholder-lg"></span>
+        </p>
+    </div>
+    <div class="col-md-6 p-0 text-center order-1 order-sm-2">
+        <img src="https://via.placeholder.com/500x333.png?text=Place%20Holder" class="w-100" alt=""> 
+    </div>
+    <div class="col-md-6 p-0 text-center"> 
+        <img src="https://via.placeholder.com/500x333.png?text=Place%20Holder" class="w-100" alt=""> 
+    </div>
+    <div class="col-md-6 p-4 p-sm-5"> 
+        <small class="text-uppercase" style="color: #43a3fc;"></small>
+        <h1 class="h2 mb-4" style="font-weight: 600;">About<span style="color: #43a3fc;"> us</span></h1>
+        <p class="text-secondary">
+            <span class="placeholder col-12 placeholder-lg"></span>
+        <span class="placeholder col-12 placeholder-lg"></span>
+        <span class="placeholder col-12 placeholder-lg"></span>
+        <span class="placeholder col-12 placeholder-lg"></span>
+        <span class="placeholder col-12 placeholder-lg"></span>
+        <span class="placeholder col-12 placeholder-lg"></span>
+        <span class="placeholder col-12 placeholder-lg"></span>
+        </p>
+    </div>
+</div>
