--- a/_pages/team.html
+++ b/_pages/team.html
@@ -4,84 +4,103 @@ title: Team
 permalink: /team/
 ---
 
-Here we can present ourselves...
+<section class="py-5 text-center container">
+    <div class="row py-lg-5">
+        <div class="col-lg-6 col-md-8 mx-auto">
+        <h1 class="fw-light"><span class="placeholder col-12 placeholder-lg"></span></h1>
+        <p class="lead text-muted">
+            <span class="placeholder col-12 placeholder-lg"></span>
+            <span class="placeholder col-12 placeholder-lg"></span>
+            <span class="placeholder col-12 placeholder-lg"></span>
+            <span class="placeholder col-12 placeholder-lg"></span>
+        </p>
+        </div>
+    </div>
+</section>
 
 
 <h1>Team</h1>
+<div class="row">
 {% assign sorted = site.members | sort: "start-date" %}
 {% for member in sorted %}
-  {% unless member.current %}
-        <!-- The paddingtop and margin-top edits allow anchors to link properly. -->
-        <div id = "{{member.name}}" class="row card-box">
-            <div class="col-4 d-table-cell p-3 v-align-middle card">
-                <img class="img-fluid rounded-circle" src="{{member.image}}"><br>
-                <strong>{{member.name}}</strong> <br>
-                {% if member.pronouns %}
-                <em>{{member.pronouns}}</em> <br>
-                {% endif %}
-                {{member.position}} <br>
-                {% if member.email %}<a href="mailto:{{ member.email | encode_email }}"><i class="fas fa-envelope"></i></a>{% endif %}
-                {% if member.orcid_id %}<a href="https://orcid.org/{{ member.orcid_id }}" target="_blank" title="ORCID"><i class="ai ai-orcid"></i></a>{% endif %}
-                {% if member.scholar_userid %}<a href="https://scholar.google.com/citations?user={{ member.scholar_userid }}" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>{% endif %}
-                {% if member.publons_id %}<a href="https://publons.com/a/{{ member.publons_id }}/" target="_blank" title="Publons"><i class="ai ai-publons"></i></a>{% endif %}
-                {% if member.research_gate_profile %}<a href="https://www.researchgate.net/profile/{{member.research_gate_profile}}/" target="_blank" title="ResearchGate"><i class="ai ai-researchgate"></i></a>{% endif %}
-                {% if member.github_username %}<a href="https://github.com/{{ member.github_username }}" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>{% endif %}
-                {% if member.linkedin_username %}<a href="https://www.linkedin.com/in/{{ member.linkedin_username }}" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>{% endif %}
-                {% if member.twitter_username %}<a href="https://twitter.com/{{ member.twitter_username }}" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>{% endif %}
-                {% if member.medium_username %}<a href="https://medium.com/@{{ member.medium_username }}" target="_blank" title="Medium"><i class="fab fa-medium"></i></a>{% endif %}
-                {% if member.quora_username %}<a href="https://www.quora.com/profile/{{ member.quora_username }}" target="_blank" title="Quora"><i class="fab fa-quora"></i></a>{% endif %}
-                {% if member.blogger_url %}<a href="{{ member.blogger_url }}" target="_blank" title="Blogger"><i class="fab fa-blogger-b"></i></a>{% endif %}
-                {% if member.work_url %}<a href="{{ member.work_url }}" target="_blank" title="Work"><i class="fas fa-briefcase"></i></a>{% endif %}
-                {% if member.wikidata_id %}<a href="https://www.wikidata.org/wiki/{{ member.wikidata_id }}" target="_blank" title="Wikidata"><i class="fas fa-barcode"></i></a>{% endif %}
-                {% if member.strava_userid %}<a href="https://www.strava.com/athletes/{{ member.strava_userid }}" target="_blank" title="Strava"><i class="fab fa-strava"></i></a>{% endif %}
-                {% if member.keybase_username %}<a href="https://keybase.io/{{ member.keybase_username }}" target="_blank" title="Keybase"><i class="fab fa-keybase"></i></a>{% endif %}
-                {% if member.gitlab_username %}<a href="https://gitlab.com/{{ member.gitlab_username }}" target="_blank" title="GitLab"><i class="fab fa-gitlab"></i></a>{% endif %}
-                {% if member.dblp_url %}<a href="{{ member.dblp_url }}" target="_blank" title="DBLP"><i class="ai ai-dblp"></i></a>{% endif %}
-            </div>
-            <div class="col-8 d-table-cell p-3">
-                <p class="text-justify">{{member.description | markdownify}} 
+    {% unless member.current %}
+    <!-- The paddingtop and margin-top edits allow anchors to link properly. -->
+    <div class="col-sm-6 col-lg-4 mb-4">
+        <div class="card pt-4">
+            <img class="card-img-top img-thumbnail circle" style="width: 120px; height: 120px; margin: 0px auto;" src="{{member.image}}" />
+            <div class="card-body">
+                <h3 class="text-center card-title mt-0"><strong>{{ member.name }}</strong></h3>
+                {% if member.pronouns %}<span class="text-center text-mute d-block">{{member.pronouns}}</span>{% endif %}
+                <span class="text-center d-block">{{member.position}}</span>
+                <p class="card-text text-left">{{member.description | markdownify}} 
                     {% if member.start-date %} 
                     <br>Joined the lab on {{member.start-date}}.
                     {% endif %}
                 </p>
             </div>
-        </div>
-  {% endunless %}
-{% endfor %}
-<!-- <hr> -->
-<h2>Alumni:</h2>
-{% for member in site.members %}
-  {% if member.current %}
-        <!-- The paddingtop and margin-top edits allow anchors to link properly. -->
-        <div id = "{{member.name}}" class="row card-box">
-            <div class="col-4 d-table-cell p-3 v-align-middle card">
-                <img class="img-fluid rounded-circle" src="{{member.image}}"><br>
-                <strong>{{member.name}}</strong> <br>
-                {% if member.pronouns %}
-                <em>{{member.pronouns}}</em> <br>
-                {% endif %}
-                {{member.position}} <br>
-                {% if member.email %}<a href="mailto:{{ member.email | encode_email }}"><i class="fas fa-envelope"></i></a>{% endif %}
-                {% if member.orcid_id %}<a href="https://orcid.org/{{ member.orcid_id }}" target="_blank" title="ORCID"><i class="ai ai-orcid"></i></a>{% endif %}
-                {% if member.scholar_userid %}<a href="https://scholar.google.com/citations?user={{ member.scholar_userid }}" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>{% endif %}
-                {% if member.publons_id %}<a href="https://publons.com/a/{{ member.publons_id }}/" target="_blank" title="Publons"><i class="ai ai-publons"></i></a>{% endif %}
-                {% if member.research_gate_profile %}<a href="https://www.researchgate.net/profile/{{member.research_gate_profile}}/" target="_blank" title="ResearchGate"><i class="ai ai-researchgate"></i></a>{% endif %}
-                {% if member.github_username %}<a href="https://github.com/{{ member.github_username }}" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>{% endif %}
-                {% if member.linkedin_username %}<a href="https://www.linkedin.com/in/{{ member.linkedin_username }}" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>{% endif %}
-                {% if member.twitter_username %}<a href="https://twitter.com/{{ member.twitter_username }}" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>{% endif %}
-                {% if member.medium_username %}<a href="https://medium.com/@{{ member.medium_username }}" target="_blank" title="Medium"><i class="fab fa-medium"></i></a>{% endif %}
-                {% if member.quora_username %}<a href="https://www.quora.com/profile/{{ member.quora_username }}" target="_blank" title="Quora"><i class="fab fa-quora"></i></a>{% endif %}
-                {% if member.blogger_url %}<a href="{{ member.blogger_url }}" target="_blank" title="Blogger"><i class="fab fa-blogger-b"></i></a>{% endif %}
-                {% if member.work_url %}<a href="{{ member.work_url }}" target="_blank" title="Work"><i class="fas fa-briefcase"></i></a>{% endif %}
-                {% if member.wikidata_id %}<a href="https://www.wikidata.org/wiki/{{ member.wikidata_id }}" target="_blank" title="Wikidata"><i class="fas fa-barcode"></i></a>{% endif %}
-                {% if member.strava_userid %}<a href="https://www.strava.com/athletes/{{ member.strava_userid }}" target="_blank" title="Strava"><i class="fab fa-strava"></i></a>{% endif %}
-                {% if member.keybase_username %}<a href="https://keybase.io/{{ member.keybase_username }}" target="_blank" title="Keybase"><i class="fab fa-keybase"></i></a>{% endif %}
-                {% if member.gitlab_username %}<a href="https://gitlab.com/{{ member.gitlab_username }}" target="_blank" title="GitLab"><i class="fab fa-gitlab"></i></a>{% endif %}
-                {% if member.dblp_url %}<a href="{{ member.dblp_url }}" target="_blank" title="DBLP"><i class="ai ai-dblp"></i></a>{% endif %}
-            </div>
-            <div class="col-8 d-table-cell p-3">
-                <p class="text-justify">{{member.description | markdownify}} <br> {{member.name}} was working with us from {{member.start-date}} to {{member.end-date}}, and has since moved on to be {{member.current}}.</p>
+            <div class="card-footer text-center text-mute">
+                {% if member.email %}<a class="text-dark" href="mailto:{{ member.email | encode_email }}"><i class="fas fa-envelope"></i></a>{% endif %}
+                {% if member.orcid_id %}<a class="text-dark" href="https://orcid.org/{{ member.orcid_id }}" target="_blank" title="ORCID"><i class="fab fa-orcid""></i></a>{% endif %}
+                {% if member.scholar_userid %}<a class="text-dark" href="https://scholar.google.com/citations?user={{ member.scholar_userid }}" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>{% endif %}
+                {% if member.research_gate_profile %}<a class="text-dark" href="https://www.researchgate.net/profile/{{member.research_gate_profile}}/" target="_blank" title="ResearchGate"><i class="fab fa-researchgate"></i></a>{% endif %}
+                {% if member.github_username %}<a class="text-dark" href="https://github.com/{{ member.github_username }}" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>{% endif %}
+                {% if member.linkedin_username %}<a class="text-dark" href="https://www.linkedin.com/in/{{ member.linkedin_username }}" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>{% endif %}
+                {% if member.twitter_username %}<a class="text-dark" href="https://twitter.com/{{ member.twitter_username }}" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>{% endif %}
+                {% if member.medium_username %}<a class="text-dark" href="https://medium.com/@{{ member.medium_username }}" target="_blank" title="Medium"><i class="fab fa-medium"></i></a>{% endif %}
+                {% if member.quora_username %}<a class="text-dark" href="https://www.quora.com/profile/{{ member.quora_username }}" target="_blank" title="Quora"><i class="fab fa-quora"></i></a>{% endif %}
+                {% if member.blogger_url %}<a class="text-dark" href="{{ member.blogger_url }}" target="_blank" title="Blogger"><i class="fab fa-blogger-b"></i></a>{% endif %}
+                {% if member.work_url %}<a class="text-dark" href="{{ member.work_url }}" target="_blank" title="Work"><i class="fas fa-briefcase"></i></a>{% endif %}
+                {% if member.wikidata_id %}<a class="text-dark" href="https://www.wikidata.org/wiki/{{ member.wikidata_id }}" target="_blank" title="Wikidata"><i class="fas fa-barcode"></i></a>{% endif %}
+                {% if member.strava_userid %}<a class="text-dark" href="https://www.strava.com/athletes/{{ member.strava_userid }}" target="_blank" title="Strava"><i class="fab fa-strava"></i></a>{% endif %}
+                {% if member.keybase_username %}<a class="text-dark" href="https://keybase.io/{{ member.keybase_username }}" target="_blank" title="Keybase"><i class="fab fa-keybase"></i></a>{% endif %}
+                {% if member.gitlab_username %}<a class="text-dark" href="https://gitlab.com/{{ member.gitlab_username }}" target="_blank" title="GitLab"><i class="fab fa-gitlab"></i></a>{% endif %}
             </div>
         </div>
-  {% endif %}
+    </div>
+    {% endunless %}
 {% endfor %}
+</div>
+<hr>
+
+<h1>Alumni</h1>
+<div class="row">
+{% assign sorted = site.members | sort: "end-date" %}
+{% for member in sorted %}
+    {% if member.current %}
+    <!-- The paddingtop and margin-top edits allow anchors to link properly. -->
+    <div class="col-sm-6 col-lg-4 mb-4">
+        <div class="card pt-4">
+            <img class="card-img-top img-thumbnail circle" style="width: 120px; height: 120px; margin: 0px auto;" src="{{member.image}}" />
+            <div class="card-body">
+                <h3 class="text-center card-title mt-0"><strong>{{ member.name }}</strong></h3>
+                {% if member.pronouns %}<span class="text-center text-mute d-block">{{member.pronouns}}</span>{% endif %}
+                <span class="text-center d-block">{{member.position}}</span>
+                <p class="card-text text-left">{{member.description | markdownify}} 
+                    {% if member.start-date %} 
+                    <br><br> {{member.name}} was working with us from {{member.start-date}} to {{member.end-date}}, and has since moved on to be {{member.current}}.
+                    {% endif %}
+                </p>
+            </div>
+            <div class="card-footer text-center text-mute">
+                {% if member.email %}<a class="text-dark" href="mailto:{{ member.email | encode_email }}"><i class="fas fa-envelope"></i></a>{% endif %}
+                {% if member.orcid_id %}<a class="text-dark" href="https://orcid.org/{{ member.orcid_id }}" target="_blank" title="ORCID"><i class="fab fa-orcid""></i></a>{% endif %}
+                {% if member.scholar_userid %}<a class="text-dark" href="https://scholar.google.com/citations?user={{ member.scholar_userid }}" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>{% endif %}
+                {% if member.research_gate_profile %}<a class="text-dark" href="https://www.researchgate.net/profile/{{member.research_gate_profile}}/" target="_blank" title="ResearchGate"><i class="fab fa-researchgate"></i></a>{% endif %}
+                {% if member.github_username %}<a class="text-dark" href="https://github.com/{{ member.github_username }}" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>{% endif %}
+                {% if member.linkedin_username %}<a class="text-dark" href="https://www.linkedin.com/in/{{ member.linkedin_username }}" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>{% endif %}
+                {% if member.twitter_username %}<a class="text-dark" href="https://twitter.com/{{ member.twitter_username }}" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>{% endif %}
+                {% if member.medium_username %}<a class="text-dark" href="https://medium.com/@{{ member.medium_username }}" target="_blank" title="Medium"><i class="fab fa-medium"></i></a>{% endif %}
+                {% if member.quora_username %}<a class="text-dark" href="https://www.quora.com/profile/{{ member.quora_username }}" target="_blank" title="Quora"><i class="fab fa-quora"></i></a>{% endif %}
+                {% if member.blogger_url %}<a class="text-dark" href="{{ member.blogger_url }}" target="_blank" title="Blogger"><i class="fab fa-blogger-b"></i></a>{% endif %}
+                {% if member.work_url %}<a class="text-dark" href="{{ member.work_url }}" target="_blank" title="Work"><i class="fas fa-briefcase"></i></a>{% endif %}
+                {% if member.wikidata_id %}<a class="text-dark" href="https://www.wikidata.org/wiki/{{ member.wikidata_id }}" target="_blank" title="Wikidata"><i class="fas fa-barcode"></i></a>{% endif %}
+                {% if member.strava_userid %}<a class="text-dark" href="https://www.strava.com/athletes/{{ member.strava_userid }}" target="_blank" title="Strava"><i class="fab fa-strava"></i></a>{% endif %}
+                {% if member.keybase_username %}<a class="text-dark" href="https://keybase.io/{{ member.keybase_username }}" target="_blank" title="Keybase"><i class="fab fa-keybase"></i></a>{% endif %}
+                {% if member.gitlab_username %}<a class="text-dark" href="https://gitlab.com/{{ member.gitlab_username }}" target="_blank" title="GitLab"><i class="fab fa-gitlab"></i></a>{% endif %}
+            </div>
+        </div>
+    </div>
+    {% endif %}
+{% endfor %}
+</div>
+
