--- a/index.html
+++ b/index.html
@@ -4,13 +4,33 @@ search_exclude: true
 image: images/logo.png
 ---
 
-# Header comes here
-
-<img src="/sample-page/images/pages/cse-data-ai.jpg" alt="cse-data-ai" style=" margin: 0 auto; text-align: center; display: block; ">
-
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. A diam sollicitudin tempor id eu.
-</p>
+<div class="p-5 mb-4 bg-light rounded-3">
+  <div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold"><span class="placeholder col-12 placeholder-lg"></span></h1>
+    <p class="col-md-8 fs-4">
+      <span class="placeholder col-12 placeholder-lg"></span>
+      <span class="placeholder col-12 placeholder-lg"></span>
+      <span class="placeholder col-12 placeholder-lg"></span>
+    </p>
+    <button class="btn btn-primary btn-lg" type="button">Example button</button>
+  </div>
+</div>
+<div class="row align-items-md-stretch">
+  <div class="col-md-6">
+    <div class="h-100 p-5 text-white bg-dark rounded-3">
+      <h2><span class="placeholder col-12 placeholder-lg"></span></h2>
+      <p>
+        <span class="placeholder col-12 placeholder-lg"></span>
+        <span class="placeholder col-12 placeholder-lg"></span>
+        <span class="placeholder col-12 placeholder-lg"></span>
+      </p>
+      <a class="btn btn-outline-light">Example button</a>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <img src="/sample-page/images/pages/cse-data-ai.jpg" alt="cse-data-ai" class="img-fluid" />
+  </div>
+</div>
 
 # Recent posts
 
