Change index page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
-layout: home
+layout: team
 search_exclude: true
 image: images/logo.png
 ---
 
-<div class="p-5 mb-4 bg-light rounded-3">
+<!-- <div class="p-5 mb-4 bg-light rounded-3">
   <div class="container-fluid py-5">
     <h1 class="display-5 fw-bold"><span class="placeholder col-12 placeholder-lg"></span></h1>
     <p class="col-md-8 fs-4">
@@ -34,4 +34,4 @@ image: images/logo.png
 
 # Recent posts
 
----
+--- -->
