deploy: 2072e9dcf23a3d766922691c373088b5e5abd6cd

--- a/publications/index.html
+++ b/publications/index.html
@@ -70,7 +70,8 @@ window.onload = wrap_img;
 <body><div class="container">
 	<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"><a href="/sample-page/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
 			<span class="fs-4">Title comes here ...</span>
-    </a><ul class="nav nav-pills"><li class="nav-item"><a class="nav-link" href="/sample-page/about/">About</a></li><li class="nav-item"><a class="nav-link" href="/sample-page/publications/">Publications</a></li><li class="nav-item"><a class="nav-link" href="/sample-page/team/">Team</a></li></ul></header>
+    </a><ul class="nav nav-pills">
+      <li class="nav-item"><a class="nav-link" href="/sample-page/">Home</a></li><li class="nav-item"><a class="nav-link" href="/sample-page/about/">About</a></li><li class="nav-item"><a class="nav-link" href="/sample-page/posts/">Posts</a></li><li class="nav-item"><a class="nav-link" href="/sample-page/publications/">Publications</a></li><li class="nav-item"><a class="nav-link" href="/sample-page/team/">Team</a></li></ul></header>
 </div><main class="container page-content" aria-label="Content">
       <div class="row">
         <div class="publications">
